# funding-alert-monitor

./: .env.example  .gitignore  API_SETUP_GUIDE.md  CLAUDE.md  DEEP_RESEARCH_PROMPT.md  LICENSE  README.md  compass_artifact_wf-9074e8d6-d0f9-4050-a067-c5cd66cca748_text_markdown.md  compass_artifact_wf-de56b939-a7e9-48a6-a82e-4714cc91acee_text_markdown.md  pyproject.toml  requirements.txt  yt_test_result.json
.github/workflows/: daily_funding_monitor.yml  funding-alerts.yml
Resources/: founder_pain_seed.json
Resources/messaging_context/: Cold Email Copywriting Analysis - Sandi Victoria.md  Jorge Email Templates - Refined.md  email1.md  email2.md  email3.md  email4.md  email5.md  jorge_call_transcript_jan29.md  jorgepersonalization.md  perplexity_research.md  personalization_masterplan_jorge.md
data/: master_startups.csv  master_startups_enriched.json  rejected_entries_for_review.csv
data/deep_research/Arbor/: research_report.md
directives/: expanded_funding_sources.md  jorge_full_system_blueprint.md
examples/: seed-funded-startups.csv
execution/: auth_jorge_gmail.py  consolidate_startup_data.py  extract_all_drafts.py  funding_monitor_hybrid.py  funding_push_notifier.py  jorge_email_generator.py  jorge_mvp_orchestrator.py  jorge_person_enricher.py  jorge_research_report.py  setup_github.py
funding_monitor/: __init__.py  cli.py  enrichment.py  io.py  monitoring.py  providers.py  records.py  reporting.py  verification.py
ntfy-funding-alerts/: README.md  docker-compose.yml  ntfy_desktop_listener.py  server.yml
tests/: test_funding_monitor.py
(+159 files in other folders)
